<resources>
    <string name="app_id">ca-app-pub-5782047288878600~5343570417</string>
    <string name="ad_unit_id">ca-app-pub-5782047288878600/4414755259</string>
    <string name="ad_unit_id_interstitial">ca-app-pub-5782047288878600/7337948400</string>
    <string name="ad_unit_id_interstitial_resume">ca-app-pub-5782047288878600/1784411736</string>
    <string name="ad_unit_id_reward">ca-app-pub-5782047288878600/3040035778</string>

    <string name="app_name">9 Letter Jumble</string>
    <string name="select_level">Select a level</string>
    <string name="select_pack">Select a level pack</string>

    <string name="settings">Settings</string>
    <string name="preference_about">Version</string>
    <string name="preference_ads">Rewarded ads</string>
    <string name="preference_ads_about">Get clue tokens when watching ads</string>
    <string name="preference_ads_about_off">Ads will not be offered</string>
    <string name="preference_challenge">Notifications</string>
    <string name="preference_challenge_about">Daily challenge reminder</string>
    <string name="preference_challenge_about_off">No reminders</string>
    <string name="preference_smart">Smart alphabetical ordering</string>
    <string name="preference_smart_about">Displayed words correspond to selected letters</string>
    <string name="preference_smart_about_off">Display a static word list</string>
    <string name="dark_mode">Dark mode</string>

    <string name="txt_no_email">No email application found</string>
    <string name="enjoying_game">Are you enjoying the game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rate_us_request">Play Store ratings make a difference. Please review the game.</string>
    <string name="rate_us_title">Rate the game</string>
    <string name="review">Review</string>
    <string name="later">Later</string>
    <string name="never">never</string>
    <string name="exit">exit</string>
    <string name="file_read_error">File Read Error</string>
    <string name="privacy_policy">Privacy policy</string>

    <string name="button_enter">enter</string>
    <string name="button_backspace">backspace</string>
    <string name="button_shuffle">shuffle</string>
    <string name="button_swop">swop</string>

    <string name="prompt_no_words">You have not found any words yet</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_select">SelectActivity</string>
    <string name="title_activity_intro">IntroActivity</string>

    <string name="invite_friends">Invite friends</string>
    <string name="share">Share</string>
    <string name="share_message">Challenge your friends to see if they can find more words than you.</string>

    <string name="upgrade">Upgrade</string>
    <string name="subscribe">Subscribe</string>
    <string name="remove_ads">Remove ads</string>
    <string name="ads_title">Bothered by the ads?</string>
    <string name="ads_msg">Ads allow us to release free games.
        \nIf ads bother you and you would like to remove them, you can do so below.
    </string>

    <string name="feedback">Feedback</string>
    <string name="feedback_message">Your bug reports, suggestions and feature requests are highly valued.
    </string>
    <string name="email_us">Email us</string>


    <string name="button_play">Play</string>
    <string name="button_challenge">Daily Challenge</string>
    <string name="button_howto">How To</string>
    <string name="button_store">Store</string>
    <string name="button_ads">Why Ads</string>
    <string name="button_solve">Solve</string>

    <string name="game_invalid_guess">%s is not in our list</string>
    <string name="game_short_guess">Minimum of four letters required</string>
    <string name="game_repeated_guess">%s already recorded</string>
    <string name="game_traditional_guess">Middle letter required: %s</string>

    <string name="game_dispute">Dispute</string>
    <string name="game_dispute_message">%1$s can be included in the game if the following holds true:

                                        \n\nIt is reasonable to expect all players to be required to find this word.
                                        \nThe word is not flagged as jargon, archaic, regional, slang, or informal.

                                        \n\nIf you believe including %2$s will improve the game, we\'ll consider adding it.</string>
    <string name="game_dispute_subject">9 Letter Jumble dispute: Add %1$s to %2$s.</string>
    <string name="game_dispute_body">"My suggested definition: "</string>

    <string name="game_image_description">GameItemImage</string>
    <string name="game_image_select">Select this game</string>
    <string name="game_default_name">Alfa</string>
    <string name="game_default_score">0/0</string>
    <string name="game_display_score">Score: %s</string>
    <string name="game_display_name">- %s -</string>
    <string name="game_display_clues_used">%d clues used</string>
    <string name="game_display_one_clue_used">1 clue used</string>

    <string name="game_stats_screen">Statistics</string>
    <string name="game_stats_4">4-letter words:\t\t%1$d/%2$d</string>
    <string name="game_stats_5">5-letter words:\t\t%1$d/%2$d</string>
    <string name="game_stats_6">6-letter words:\t\t%1$d/%2$d</string>
    <string name="game_stats_7">7-letter words:\t\t%1$d/%2$d</string>
    <string name="game_stats_8">8-letter words:\t\t%1$d/%2$d</string>
    <string name="game_stats_9">9-letter words:\t\t%1$d/%2$d</string>


    <string name="definitions">Definitions</string>

    <string name="clues">Clues</string>
    <string name="solution">Solution</string>
    <string name="clue_gained_one">1 clue token gained</string>
    <string name="clue_gained">%d clue tokens gained</string>
    <string name="clues_available_tokens">Available clue tokens: %1$d</string>
    <string name="clues_message">%s
                                \nClue tokens used: %d</string>
    <string name="clues_message_no_tokens">Keep playing to collect clue tokens,
                                            or visit the store and pick up a clue pack.\n</string>
    <string name="clues_use">Get clue</string>
    <string name="clues_old">View clues</string>

    <string name="clue_new">Clue</string>
    <string name="clue_new_message">"%1$s\nFirst letter: %2$s \n\nUse another clue token to view the solution?"</string>
    <string name="clue_solved_message">"%1$s\nSolved: %2$s"</string>

    <string name="unlock_title">Unlock %s</string>
    <string name="unlock_message">Find 50%% of the words in %s to unlock this level.</string>
    <string name="unlock_pack_message">Find 50%% of the words in every level of %s to unlock this pack.</string>
    <string name="unlocked_title">Level unlocked</string>
    <string name="unlocked_message">Congratulations! You\'ve unlocked %s.</string>
    <string name="unlocked_keep_going">Gain 3 bonus clue tokens when you complete the level.</string>

    <string name="gold_locked">Level pack locked</string>
    <string name="gold_message">In Gold Rush, levels have no middle letter requirement.
                                \n\nOnly available to premium players and email newsletter subscribers.</string>
    <string name="gold_message_premium">In Gold Rush, levels have no middle letter requirement.
                                \n\nThanks for supporting us by going premium!</string>
    <string name="subscribe_message">Hit SUBSCRIBE below then come back with the unlock code.</string>
    <string name="subscribe_subject">9LJ newsletter signup</string>
    <string name="subscribe_body">Do not edit the subject or add anything to this email.
                              \n\nIt is set up to trigger an automatic response and will not be read by a human. :)</string>
    <string name="unlock">unlock</string>
    <string name="invalid_code">Invalid code</string>
    <string name="gold_unlocked">Premium level pack unlocked</string>
    <string name="premium_pack">Premium pack</string>

    <string name="clue_tip_title">Score</string>
    <string name="clue_tip_description">Find 15 words to gain your first clue token</string>
    <string name="share_tip_title">Gain three bonus clue tokens</string>
    <string name="share_tip_description">Share the game on social media</string>
    <string name="stats_tip_description">Tap the word list to view level stats</string>
    <string name="store_tip_title">Game Store</string>
    <string name="store_tip_description">Upgrade to premium\nor get clue tokens</string>

    <string name="intro_title_1">Welcome to\n9 Letter Jumble</string>
    <string name="intro_title_2">Rules of the game</string>
    <string name="intro_title_3">Clue tokens</string>
    <string name="intro_desc_1">Find words of four letters or more by using the letters in the grid.</string>
    <string name="intro_desc_2">Each letter can only be used once, and every word must contain the center letter.
                                Every level has at least one 9&#160;letter word.</string>
    <string name="intro_desc_3">Gain a clue token for every 9&#160;letter word you find, and 3&#160;bonus clue tokens
                                when you complete a level.</string>

    <string name="start_time">02:00</string>
    <string name="challenge_message">Gain a clue token by finding the correct 6&#160;letter word before the time runs out.</string>
    <string name="challenge_wrong_guess">Incorrect, try again</string>
    <string name="challenge_solved_title">Well done</string>
    <string name="challenge_solved">One clue token gained. Come back tomorrow for another challenge.</string>
    <string name="challenge_failed_title">Time\'s up</string>
    <string name="challenge_failed">Answer: %s.</string>
    <string name="challenge_come_again">You have already completed the daily challenge today.
        Come back tomorrow for another challenge.</string>
    <string name="challenge_exit_title">End challenge?</string>
    <string name="challenge_exit_message">You will not be able to play another challenge until tomorrow.</string>
    <string name="challenge_reminder">Tap to play the daily challenge.</string>

    <string name="reward_title">Rewarded ads</string>
    <string name="reward_message">Watch an ad to gain a clue token?</string>


    <string name="purchase_cancelled">Purchase cancelled</string>
    <string name="alert_already_purchased">Item has already been purchased</string>
    <string name="button_buy">Buy</string>
    <string name="button_own">Owned</string>
    <string name="button_watch">Watch now</string>
    <string name="error_no_skus">We didn\'t find any SKUs to display… Check your internet
        connection and make sure your Google Developer Console was setup correctly.</string>
    <string name="error_billing_unavailable">Billing unavailable. Make sure your Google Play app
        is up to date</string>
    <string name="error_billing_default">Billing unavailable. Please check your device.</string>
    <string name="content_description_app_loading_image">App loading image</string>
    <string name="sfx_volume">Sound effects volume</string>

</resources>
