<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <SwitchPreference
        android:defaultValue="true"
        android:key="offer_rewarded_ads"
        android:summaryOff="@string/preference_ads_about_off"
        android:summaryOn="@string/preference_ads_about"
        android:title="@string/preference_ads" />


    <SwitchPreference
        android:key="dark_mode"
        android:defaultValue="false"
        android:title="@string/dark_mode"/>

    <SwitchPreference
        android:key="smart_preference"
        android:defaultValue="true"
        android:title="@string/preference_smart"
        android:summaryOn="@string/preference_smart_about"
        android:summaryOff="@string/preference_smart_about_off"/>

    <SwitchPreference
        android:key="challenge_reminders"
        android:defaultValue="true"
        android:title="@string/preference_challenge"
        android:summaryOn="@string/preference_challenge_about"
        android:summaryOff="@string/preference_challenge_about_off"/>

    <Preference
        android:key="simple_text_about"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/preference_about"
        android:summary="0"/>

</PreferenceScreen>