<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_share"
        android:orderInCategory="101"
        android:title="@string/invite_friends"/>

    <item
        android:id="@+id/menu_feedback"
        android:orderInCategory="102"
        android:title="@string/feedback"/>

    <item
        android:id="@+id/menu_why_ads"
        android:orderInCategory="103"
        android:title="@string/remove_ads"/>

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="109"
        android:title="@string/settings">
    </item>

    <item
        android:id="@+id/menu_privacy_policy"
        android:orderInCategory="104"
        android:title="@string/privacy_policy"/>

</menu>