<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/word_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="24dp"
    app:cardBackgroundColor="@color/colorAccent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp">

        <ImageView
            android:id="@+id/game_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/game_image_description"
            android:padding="6dp"
            app:srcCompat="@drawable/ic_icon_game1" />

        <TextView
            android:id="@+id/game_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/game_image"
            android:padding="6dp"
            android:text="@string/game_default_name"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/game_tag">
            <TextView
                android:id="@+id/game_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_default_score"
                android:textAlignment="viewStart"
                android:textColor="@android:color/white"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/clues_used"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_display_clues_used"
                android:textAlignment="viewStart"
                android:textColor="@android:color/white"
                android:textSize="12sp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_arrow"
            android:contentDescription="@string/game_image_select"/>


    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
