<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusableInTouchMode="true"
    tools:context="za.co.twinc.a9letterjumble.MainActivity">

    <include layout="@layout/loading_indicator"/>

    <ScrollView
        android:id="@+id/screen_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/alphabet">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/activity_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/spacer"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <Button
                android:id="@+id/buttonPlay"
                style="@style/MainButtons"
                android:onClick="onPlayClicked"
                android:text="@string/button_play"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spacer" />

            <Button
                android:id="@+id/buttonChallenge"
                style="@style/MainButtons"
                android:onClick="onChallengeClicked"
                android:text="@string/button_challenge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonPlay" />

            <Button
                android:id="@+id/buttonHowto"
                style="@style/MainButtons"
                android:onClick="onHowClicked"
                android:text="@string/button_howto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonChallenge" />

            <Button
                android:id="@+id/buttonStore"
                style="@style/MainButtons"
                android:onClick="onStoreClicked"
                android:text="@string/button_store"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonHowto" />

            <Button
                android:id="@+id/buttonAds"
                style="@style/MainButtons"
                android:onClick="onAdsButtonClicked"
                android:text="@string/button_ads"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonStore" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_round"
                app:layout_constraintStart_toStartOf="@+id/buttonAds"
                app:layout_constraintTop_toBottomOf="@+id/buttonAds"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp">

                <ImageButton
                    android:id="@+id/buttonRate"
                    android:onClick="onRateClicked"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:scaleType="fitCenter"
                    app:srcCompat="@android:drawable/btn_star_big_on" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_round"
                app:layout_constraintEnd_toEndOf="@+id/buttonAds"
                app:layout_constraintTop_toBottomOf="@+id/buttonAds">

                <ImageButton
                    android:id="@+id/buttonShare"
                    android:onClick="onShareClicked"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:scaleType="fitCenter"
                    app:srcCompat="?attr/actionModeShareDrawable"
                    android:tint="@android:color/white"/>

            </FrameLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
