<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="za.co.twinc.a9letterjumble.GameActivity"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:showIn="@layout/activity_game">

    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/game_content">

        <nl.dionsegijn.konfetti.KonfettiView
            android:id="@+id/viewKonfetti"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/guess_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_guess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/guess_text"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/text_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/guess_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/timer_background"
            android:text="@string/start_time"
            android:textColor="@android:color/white"
            android:textSize="@dimen/timer_text"
            android:layout_marginTop="32dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textStyle="bold"/>

        <GridView
            android:id="@+id/grid"
            android:layout_width="@dimen/grid_size"
            android:layout_height="@dimen/grid_size"
            android:padding="2dp"
            android:horizontalSpacing="12dp"
            android:listSelector="@android:color/transparent"
            android:numColumns="3"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="24dp"
            android:verticalSpacing="12dp"
            app:layout_constraintTop_toBottomOf="@id/text_timer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <ImageButton
            android:id="@+id/button_backspace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/button_backspace"
            android:onClick="onButtonBackspaceClick"
            app:layout_constraintEnd_toStartOf="@id/button_enter"
            app:layout_constraintTop_toBottomOf="@id/grid"
            app:srcCompat="@drawable/ic_backspace" />

        <ImageButton
            android:id="@+id/button_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/button_enter"
            android:onClick="onButtonEnterClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/button_backspace"
            app:srcCompat="@drawable/ic_add_box" />

        <ImageButton
            android:id="@+id/button_shuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/button_shuffle"
            android:onClick="onButtonShuffleClick"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/grid"
            app:layout_constraintTop_toTopOf="@id/grid"
            app:srcCompat="@drawable/ic_autorenew" />

        <ImageButton
            android:id="@+id/button_swop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/button_swop"
            android:onClick="onButtonSwopClick"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/grid"
            app:layout_constraintTop_toTopOf="@id/grid"
            app:srcCompat="@drawable/ic_swap_vert" />


        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/game_display_score"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/grid" />

        <FrameLayout
            android:id="@+id/testFrame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/button_backspace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0"
            >

            <android.support.v7.widget.CardView
                android:id="@+id/word_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintHeight_max="wrap"
                app:cardBackgroundColor="@color/colorPrimary"
                android:layout_margin="16dp">

                <ScrollView
                    android:id="@+id/word_card_middle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:animateLayoutChanges="true">

                    <TextView
                        android:id="@+id/word_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_no_words"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_16" />
                </ScrollView>
            </android.support.v7.widget.CardView>
        </FrameLayout>


        <com.andremion.counterfab.CounterFab
            android:id="@+id/counter_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/altColor"
            app:rippleColor="@android:color/transparent"
            app:srcCompat="@drawable/ic_search"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:id="@+id/button_gift"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="12dp"
            android:elevation="3dp"
            app:srcCompat="@drawable/gift"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/button_enter"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/ad_unit_id"/>

</LinearLayout>